daom_app_aks/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daom-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: daom-app
  template:
    metadata:
      labels:
        app: daom-app
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      terminationGracePeriodSeconds: 60
      containers:
        - name: daom-app
          image: ttoksiri.azurecr.io/daom/app:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 1Gi
              cpu: 1000m
            limits:
              memory: 2Gi
              cpu: 2000m
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/server-health
              port: 3000
              # set host to health-check.ttoksiri.net
              httpHeaders:
                - name: Host
                  value: health-check.ttoksiri.net
            initialDelaySeconds: 15
          livenessProbe:
            httpGet:
              path: /api/server-health
              port: 3000
              httpHeaders:
                - name: Host
                  value: health-check.ttoksiri.net
            initialDelaySeconds: 60
            timeoutSeconds: 5
          securityContext:
            runAsUser: 1001
            runAsGroup: 1001
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

---
apiVersion: v1
kind: Service
metadata:
  name: daom-app
spec:
  selector:
    app: daom-app
  ports:
    - port: 80
      targetPort: 3000
